apps/next/remark42/patch.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remark42
spec:
  template:
    spec:
      containers:
        - name: remark42
          image: umputun/remark42:v1.17.1 # {"$imagepolicy": "harrytang-staging:remark42"}
