apps/next/remark42/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: remark42-http
spec:
  hostnames:
    - comment-next.harrytang.xyz
